--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.1",
+    "normalize.css": "^8.0.1",
+    "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
