--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "less": "^3.11.3",
     "less-loader": "^6.1.1",
+    "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11",
